feat: add sitemap, add mdx, add static images to articles

--- a/src/content/project/marvinl-point-com.mdx
+++ b/src/content/project/marvinl-point-com.mdx
@@ -19,17 +19,15 @@ Encore une action réalisée sur un coup de tête, "Tiens et si je retapais mon 
 
 Mon précédent site date de 2014, et n'a pas spécialement bougé depuis, c'était du html/css classique avec quelques librairies JQuery *(suis-je si vieux ?) *pour faire bouger des lettres, ou afficher des textes géants…
 
-![Capture d'écran de l'ancien site](/images/mlr.com.png)
+![Capture d'écran de l'ancien site](../../assets/mlr.com.png)
 
 Même si les rares personnes à le visiter, me disaient qu'iels avaient bien rigolé en passant dessus. C'était pour moi, une vitrine périmée, la liste des projets affichée dessus pourra en témoigner :
 
-![ancienne liste de projets sur lesquels j'ai travaillé](/images/mlr2.png)
+![ancienne liste de projets sur lesquels j'ai travaillé](../../assets/mlr2.png)
 
 _(L'API du service que j'utilisais pour récupérer les miniatures des sites n'a plus l'air de fonctionner)_
 
 Je n'avais pas à l'époque, *(et n'ai toujours pas)* de stratégie d'acquisition, ni même l'envie de chercher de nouveaux clients *(on en reparlera dans un article dédié) du coup pas de grand changements à mettre en place ce sera une refonte rapide.*
-
-Si tu veux te faire mal aux yeux, je l'ai laissé accessible ici : [le vieux site](http://old.marvinl.com)
 
 ## Une Refonte rapide
 
